# pice-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  PRDv2.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: PRD.md  settings.json
.claude/commands/: commit-and-deploy.md  commit.md  create-rules.md  evaluate.md  execute.md  handoff.md  plan-feature.md  prime.md  review.md
.claude/docs/: AGENT-TEAMS-PLAYBOOK.md  _example-architecture.md
.claude/hooks/: vet-handoff.sh
.claude/plans/: phase-0-daemon-foundation.md  phase-1-foundation.md  phase-1-handler-porting.md  phase-1-layer-detection-stack-loops.md  phase-2-workflow-yaml-and-validation.md  phase-3-seam-verification.md  phase-4-adaptive-evaluation.md  phase-4-metrics-telemetry.md  phase-6-review-gates.md  pice-ux-patterns-prd.md  pre-launch-polish.md  readme-visual-assets.md  test-feature.md
.claude/rules/: _example-frontend.md  daemon.md  docs-visual-assets.md  metrics.md  protocol.md  providers.md  rust-core.md  stack-loops.md  templates.md  workflow-yaml.md
.claude/templates/: CLAUDE-template.md  HANDOFF-template.md  PRD-template.md  plan-template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  provider-request.yml
.github/workflows/: ci.yml  release.yml
crates/pice-cli/: Cargo.toml
crates/pice-cli/src/: main.rs
crates/pice-cli/src/adapter/: autostart.rs  inline.rs  mod.rs  transport.rs
crates/pice-cli/src/commands/: audit.rs  benchmark.rs  commit.rs  daemon.rs  evaluate.rs  execute.rs  handoff.rs  init.rs  layers.rs  metrics.rs  mod.rs  plan.rs  prime.rs  review.rs  review_gate.rs  status.rs  validate.rs
crates/pice-cli/src/config/: mod.rs
crates/pice-cli/src/engine/: mod.rs  orchestrator.rs  output.rs  plan_parser.rs  prompt.rs  status.rs
crates/pice-cli/src/input/: decision_source.rs  mod.rs
crates/pice-cli/src/metrics/: mod.rs  store.rs  telemetry.rs
crates/pice-cli/src/provider/: host.rs  mod.rs  registry.rs
crates/pice-cli/src/templates/: mod.rs
crates/pice-cli/tests/: adaptive_integration.rs  audit_gates_csv_roundtrip.rs  command_integration.rs  evaluate_integration.rs  evaluate_review_gate_pending.rs  provider_host_integration.rs  provider_integration.rs
crates/pice-core/: Cargo.toml
crates/pice-core/src/: gate.rs  lib.rs  paths.rs  plan_parser.rs
crates/pice-core/src/adaptive/: adts.rs  calibration_tests.rs  cost.rs  decide.rs  mod.rs  sprt.rs  types.rs  vec.rs
crates/pice-core/src/cli/: mod.rs
crates/pice-core/src/config/: mod.rs
crates/pice-core/src/layers/: detect.rs  filter.rs  manifest.rs  mod.rs
crates/pice-core/src/prompt/: helpers.rs  mod.rs
crates/pice-core/src/protocol/: methods.rs  mod.rs
crates/pice-core/src/provider/: mod.rs  registry.rs
crates/pice-core/src/seam/: mod.rs  types.rs
crates/pice-core/src/seam/defaults/: config_mismatch.rs  env_scan.rs  network_topology.rs  openapi_compliance.rs  retry_storm.rs  schema_drift.rs  service_discovery.rs  version_skew.rs
crates/pice-core/src/transport/: mod.rs
crates/pice-core/src/workflow/: loader.rs  merge.rs  mod.rs  schema.rs  trigger.rs  validate.rs
crates/pice-daemon/: Cargo.toml
crates/pice-daemon/src/: clock.rs  inline.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  test_support.rs
crates/pice-daemon/src/handlers/: audit.rs  benchmark.rs  commit.rs  evaluate.rs  execute.rs  handoff.rs  init.rs  layers.rs  metrics.rs  mod.rs  plan.rs  prime.rs  review.rs  review_gate.rs  status.rs  validate.rs
crates/pice-daemon/src/metrics/: aggregator.rs  db.rs  mod.rs  store.rs
crates/pice-daemon/src/orchestrator/: adaptive_loop.rs  core.rs  mod.rs  seam_runner.rs  session.rs  stack_loops.rs  stream.rs
crates/pice-daemon/src/prompt/: builders.rs  layer_builder.rs  mod.rs
crates/pice-daemon/src/provider/: host.rs  mod.rs
crates/pice-daemon/src/server/: auth.rs  mod.rs  router.rs  windows.rs
crates/pice-daemon/src/templates/: mod.rs
crates/pice-daemon/tests/: adaptive_concurrent.rs  adaptive_integration.rs  auth.rs  lifecycle.rs  parallel_cohort_speedup_assertion.rs  review_gate_lifecycle_integration.rs  seam_integration.rs  streaming.rs  workflow_integration.rs
crates/pice-protocol/: Cargo.toml
crates/pice-protocol/src/: lib.rs
docs/: roadmap.md
docs/diagrams/: architecture.excalidraw  evaluation-tiers.excalidraw
docs/guides/: agent-teams.md  authoring-seam-checks.md  brownfield.md  migration-v01-to-v02.md  playbook.md
docs/images/: pice-evaluate-demo.sh  pice-evaluate-demo.tape
docs/methodology/: contract.md  evaluate.md  implement.md  overview.md  plan.md
docs/providers/: building-a-provider.md  protocol.md
docs/superpowers/specs/: 2026-04-03-pre-launch-polish-design.md  2026-04-13-phase1-layer-detection-stack-loops-design.md
npm/pice/: index.js  package.json
npm/pice-darwin-arm64/: package.json
npm/pice-darwin-x64/: package.json
npm/pice-linux-arm64/: package.json
npm/pice-linux-x64/: package.json
npm/pice-win32-x64/: package.json
templates/claude/commands/: commit-and-deploy.md  create-prd.md  empty-redeploy.md  execute.md  plan-feature.md  review.md  validate.md
templates/claude/docs/: BROWNFIELD-GUIDE.md  PLAYBOOK.md
templates/claude/templates/: plan-template.md
templates/pice/: config.toml  workflow.yaml
templates/pice/contracts/: api.toml  backend.toml  database.toml  deployment.toml  frontend.toml  infrastructure.toml  observability.toml
templates/pice/workflow-presets/: brownfield.yaml  ci.yaml  greenfield.yaml  permissive.yaml  strict.yaml
