[workspace]
members = ["crates/pice-cli", "crates/pice-protocol"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jacob Molz"]
license = "MIT"
repository = "https://github.com/jacobmolz/pice"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
