[workspace]
members = [
    "crates/pice-cli",
    "crates/pice-core",
    "crates/pice-daemon",
    "crates/pice-protocol",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Jacob Molz"]
license = "MIT"
repository = "https://github.com/jacobmolz/pice"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
getrandom = "0.2"
subtle = "2"
