[package]
name = "pice-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PICE CLI — structured AI coding workflow orchestrator"

[[bin]]
name = "pice"
path = "src/main.rs"

[dependencies]
pice-protocol = { path = "../pice-protocol" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = "8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
