[package]
name = "pice-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PICE CLI — structured AI coding workflow orchestrator"
homepage = "https://github.com/jacobmolz/pice"
readme = "../../README.md"
keywords = ["ai", "cli", "workflow", "coding", "evaluation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pice"
path = "src/main.rs"

[dependencies]
pice-protocol = { path = "../pice-protocol" }
pice-core = { path = "../pice-core" }
pice-daemon = { path = "../pice-daemon" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
# Phase 6: typed errors for `DecisionSource` so the review-gate CLI
# loop can pattern-match on EOF / script exhaustion without string
# sniffing anyhow messages.
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
