[package]
name = "pice-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PICE daemon — orchestration, state, provider host, and daemon RPC server"

[lib]
name = "pice_daemon"
path = "src/lib.rs"

[[bin]]
name = "pice-daemon"
path = "src/main.rs"

[dependencies]
pice-protocol = { path = "../pice-protocol" }
pice-core = { path = "../pice-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
rusqlite = { workspace = true }
rust-embed = "8"
chrono = { workspace = true }
reqwest = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }
# Phase 4.1 Pass-10 Codex HIGH #2: cross-platform advisory file lock
# (POSIX `flock()` on Unix, `LockFileEx` on Windows) for per-manifest
# interprocess serialization. See `server/router.rs::acquire_manifest_file_lock`.
# Scoped to `pice-daemon` only — `pice-core` stays dep-light (contract
# criterion #14).
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
