[package]
name = "pice-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PICE daemon — orchestration, state, provider host, and daemon RPC server"

[lib]
name = "pice_daemon"
path = "src/lib.rs"

[[bin]]
name = "pice-daemon"
path = "src/main.rs"

[dependencies]
pice-protocol = { path = "../pice-protocol" }
pice-core = { path = "../pice-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
rusqlite = { workspace = true }
rust-embed = "8"
chrono = { workspace = true }
reqwest = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }
# Phase 4.1 Pass-10 Codex HIGH #2: cross-platform advisory file lock
# (POSIX `flock()` on Unix, `LockFileEx` on Windows) for per-manifest
# interprocess serialization. See `server/router.rs::acquire_manifest_file_lock`.
# Scoped to `pice-daemon` only — `pice-core` stays dep-light (contract
# criterion #14).
fs2 = "0.4"
# Phase 5 cohort parallelism: default for `defaults.max_parallelism` when
# unset. Capped at 16 inside `stack_loops.rs` to stay rate-limit-friendly
# against Anthropic/OpenAI.
num_cpus = "1.16"
# Phase 5 cohort parallelism: cancellation primitive. Child tokens
# propagate cleanly through spawned cohort tasks — chosen over
# `tokio::sync::watch::Receiver<bool>` which would require manual cascade.
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
# Phase 5 cohort parallelism: criterion bench for sequential vs parallel
# wall-clock on the stub-provider fixture. The companion CI-gating test
# at `tests/parallel_cohort_speedup_assertion.rs` is what actually fails
# CI on regression — `cargo bench` is informational only.
criterion = { version = "0.5", features = ["async_tokio"] }
